--- a/Email-Writer-Backend/src/main/resources/application.properties
+++ b/Email-Writer-Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Email-Writer
 server.port = 8081
 
-gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=
-gemini.api.key=AIzaSyDPHaF51toFlTlgbUtqrpVhKMbQ898Ww18
+gemini.api.url=${GEMINI_URL}
+gemini.api.key=${GEMINI_KEY}
